# pca_number_detector

./: CMakeLists.txt  README.md
demo/: detector_demo.cpp
image/num_test/: create_link.sh  link.txt
image/num_train/: link.txt
include/number_detector/: number_detector.h
src/: number_detector.cpp
